<resources>

    <string name="app_name">AlarmClk</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_item_0">About</string><string name="menu_item_1">Exit</string><string name="title_activity_alarm_clk">AlarmClk</string>
    <string name="button1">Set Alarm</string>
    <color name="myColor">#0F0F0F</color>
    <string name="button2">  Cancel  </string>
    <string name="button3"> Snooze </string>
    <string name="textview1"> </string>
    <color name="FontColor">#FFFFFF</color>
    <string name="textview2">Set the time of the alarm :</string>
    <color name="Gray">#ffaaaaaa</color>
    
    
    

</resources>